--- a/.gitignore
+++ b/.gitignore
@@ -36,7 +36,7 @@
 
 # Executables
 #*.exe
-#*.out
+*.out
 *.app
 *.i*86
 *.x86_64
@@ -50,16 +50,9 @@
 
 # Kernel Module Compile Results
 *.mod*
-# *.cmd
+*.cmd
 .tmp_versions/
 modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
-
-# SDL2
-
-# lib/
-# include/SDL2
-
-local/
