--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,5 +1,9 @@
 name: gClock - Build and Release
 
+permissions:
+  contents: write
+  issues: none
+
 on:
   push:
     tags:
@@ -7,61 +11,192 @@ on:
 
 jobs:
   build-linux:
-    name: Build Linux
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-      - name: Install dependencies
+      - uses: actions/checkout@v4
+
+      - name: Install build tools
         run: |
           sudo apt-get update
-          sudo apt-get install -y build-essential libsdl2-dev libsdl2-ttf-dev
-      - name: Build static binary
+          # Use g++ for standard C/C++ build tools
+          sudo apt-get install -y build-essential autoconf automake libtool pkg-config wget unzip cmake g++
+
+      - name: Build dependencies
+        run: |
+          mkdir -p deps && cd deps
+          DEPS_DIR=$PWD
+
+          # --- SDL2 ---
+          wget https://www.libsdl.org/release/SDL2-2.32.10.tar.gz
+          tar xzf SDL2-2.32.10.tar.gz
+          cd SDL2-2.32.10
+          ./configure --prefix=$PWD/build --disable-shared
+          make -j$(nproc) && make install
+          cd ..
+
+          # --- SDL2_ttf ---
+          wget https://github.com/libsdl-org/SDL_ttf/releases/download/release-2.24.0/SDL2_ttf-2.24.0.tar.gz
+          tar xzf SDL2_ttf-2.24.0.tar.gz
+          cd SDL2_ttf-2.24.0
+          # Ensure correct PKG_CONFIG_PATH for finding SDL2
+          PKG_CONFIG_PATH=$DEPS_DIR/SDL2-2.32.10/build/lib/pkgconfig ./configure --prefix=$PWD/build --disable-shared
+          make -j$(nproc) && make install
+          cd ..
+
+          # --- zlib ---
+          wget https://zlib.net/zlib-1.3.1.tar.gz
+          tar xzf zlib-1.3.1.tar.gz
+          cd zlib-1.3.1
+          ./configure --prefix=$PWD/build
+          make -j$(nproc) && make install
+          cd ..
+
+          # --- libpng ---
+          wget https://download.sourceforge.net/libpng/libpng-1.6.41.tar.gz
+          tar xzf libpng-1.6.41.tar.gz
+          cd libpng-1.6.41
+          # Configure libpng to use the custom zlib build
+          PKG_CONFIG_PATH=$DEPS_DIR/zlib-1.3.1/build/lib/pkgconfig ./configure --prefix=$PWD/build --with-zlib-prefix=$DEPS_DIR/zlib-1.3.1/build --disable-shared
+          make -j$(nproc) && make install
+          cd ..
+
+          # --- Brotli ---
+          wget https://github.com/google/brotli/archive/refs/tags/v1.2.0.zip -O brotli-1.2.0.zip
+          unzip brotli-1.2.0.zip
+          cd brotli-1.2.0
+          mkdir build && cd build
+          cmake -DCMAKE_INSTALL_PREFIX=$PWD/../build -DBROTLI_SHARED_LIBS=OFF ..
+          make -j$(nproc) && make install
+          cd ../..
+
+          # 🛑 FIX: bzip2 install. Removed the failing 'make install' and manually copy artifacts.
+          # --- bzip2 ---
+          wget https://sourceware.org/pub/bzip2/bzip2-1.0.8.tar.gz
+          tar xzf bzip2-1.0.8.tar.gz
+          cd bzip2-1.0.8
+          make -j$(nproc)
+
+          # Manually copy library and header to a 'build' directory for static linking
+          mkdir -p $PWD/build/lib $PWD/build/include
+          cp libbz2.a $PWD/build/lib/
+          cp bzlib.h $PWD/build/include/
+          cd ..
+
+          # --- freetype ---
+          wget https://download.savannah.gnu.org/releases/freetype/freetype-2.13.1.tar.gz
+          tar xzf freetype-2.13.1.tar.gz
+          cd freetype-2.13.1
+
+          # Fix: Use LDFLAGS and CFLAGS to link bzip2 manually, as it lacks pkg-config.
+          # Only use pkg-config for libraries that provide it.
+          PKG_CONFIG_PATH=$DEPS_DIR/zlib-1.3.1/build/lib/pkgconfig:$DEPS_DIR/libpng-1.6.41/build/lib/pkgconfig:$DEPS_DIR/brotli-1.2.0/build/lib/pkgconfig \
+          LDFLAGS="-L$DEPS_DIR/bzip2-1.0.8/build/lib" CFLAGS="-I$DEPS_DIR/bzip2-1.0.8/build/include" \
+          ./configure --prefix=$PWD/build --with-zlib=yes --with-bzip2=yes --with-png=yes --with-brotli=yes --disable-shared
+          make -j$(nproc) && make install
+          cd ..
+
+          # --- harfbuzz ---
+          wget https://github.com/harfbuzz/harfbuzz/releases/download/8.1.0/harfbuzz-8.1.0.tar.xz
+          tar xf harfbuzz-8.1.0.tar.xz
+          cd harfbuzz-8.1.0
+          # Ensure correct PKG_CONFIG_PATH for finding freetype
+          PKG_CONFIG_PATH=$DEPS_DIR/freetype-2.13.1/build/lib/pkgconfig ./configure --prefix=$PWD/build --disable-shared
+          make -j$(nproc) && make install
+          cd ../..
+
+      - name: Build gClock (Linux)
         run: |
           mkdir -p build
-          gcc -std=c99 -O2 -static src/main.c -o build/gclock-linux -lSDL2 -lSDL2_ttf
-      - name: Upload Release Asset
-        uses: softprops/action-gh-release@v2
+          # Compile gClock using the statically built dependencies
+          gcc -std=c99 -O2 \
+            -Ideps/SDL2-2.32.10/build/include/SDL2 \
+            -Ideps/SDL2_ttf-2.24.0/build/include/SDL2 \
+            src/main.c \
+            -o build/gclock-linux \
+            -Ldeps/SDL2-2.32.10/build/lib -lSDL2 \
+            -Ldeps/SDL2_ttf-2.24.0/build/lib -lSDL2_ttf \
+            -Ldeps/zlib-1.3.1/build/lib -lz \
+            -Ldeps/libpng-1.6.41/build/lib -lpng16 \
+            -Ldeps/bzip2-1.0.8/build/lib -lbz2 \
+            -Ldeps/brotli-1.2.0/build/lib -lbrotlienc -lbrotlidec -lbrotlicommon \
+            -Ldeps/freetype-2.13.1/build/lib -lfreetype \
+            -Ldeps/harfbuzz-8.1.0/build/lib -lharfbuzz \
+            -lpthread -lm
+
+      - uses: softprops/action-gh-release@v2
         with:
           files: build/gclock-linux
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   build-windows:
-    name: Build Windows
     runs-on: windows-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-      - name: Install MinGW
-        run: choco install -y mingw
-      - name: Build executable
-        shell: bash
-        run: |
-          mkdir -p build
-          gcc -std=c99 -O2 src/main.c -o build/gclock.exe -lmingw32 -lSDL2main -lSDL2 -lSDL2_ttf
-      - name: Upload Release Asset
-        uses: softprops/action-gh-release@v2
-        with:
-          files: build/gclock.exe
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+     - uses: actions/checkout@v4
+
+     - name: Install MSYS2
+       shell: powershell
+       run: choco install -y msys2
+
+     - name: Update PATH for MSYS2 Binaries
+       shell: powershell
+       run: |
+         "C:\msys64\usr\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+
+     - name: Install MinGW Dependencies
+       shell: powershell
+       run: |
+         bash.exe -lc "pacman -Sy --noconfirm"
+         bash.exe -lc "pacman -S --noconfirm base-devel mingw-w64-x86_64-toolchain mingw-w64-x86_64-SDL2 mingw-w64-x86_64-SDL2_ttf"
+
+     - name: Build gClock (Windows)
+       shell: powershell
+       run: |
+         PREFIX=/mingw64
+         mkdir -p build
+         x86_64-w64-mingw32-gcc -std=c99 -O2 \
+         -I$PREFIX/include/SDL2 \
+         src/main.c \
+         -o build/gclock.exe \
+         -L$PREFIX/lib -lSDL2 -lSDL2_ttf \
+         -lwinmm -ldsound -lsetupapi -mwindows
+
+     - uses: softprops/action-gh-release@v2
+       with:
+         files: build/gclock.exe
+       env:
+         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   build-macos:
-    name: Build macOS
     runs-on: macos-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-      - name: Install dependencies
-        run: |
-          brew install sdl2 sdl2_ttf
-      - name: Build binary
+      - uses: actions/checkout@v4
+
+      - name: Install build tools and dependencies
+        # pkg-config is critical for finding Homebrew library paths
+        run: brew install autoconf automake libtool pkg-config wget cmake sdl2 sdl2_ttf
+
+      # 🛑 FIX: Use pkg-config to find the correct flags and paths for Homebrew installed SDL2/SDL2_ttf
+      - name: Build gClock (macOS)
         run: |
           mkdir -p build
-          gcc -std=c99 -O2 src/main.c -o build/gclock-macos -lSDL2 -lSDL2_ttf
-      - name: Upload Release Asset
-        uses: softprops/action-gh-release@v2
+
+          # Get CFLAGS and LDFLAGS from pkg-config
+          # Using backticks is standard for command substitution in shell
+          CFLAGS="$(pkg-config --cflags sdl2 SDL2_ttf)"
+          LDFLAGS="$(pkg-config --libs sdl2 SDL2_ttf)"
+
+          echo "CFLAGS: $CFLAGS"
+          echo "LDFLAGS: $LDFLAGS"
+
+          gcc -std=c99 -O2 \
+            $CFLAGS \
+            src/main.c \
+            -o build/gclock-macos \
+            $LDFLAGS \
+            -lpthread -lm
+
+      - uses: softprops/action-gh-release@v2
         with:
           files: build/gclock-macos
         env:
